--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.10.2",
         "autoprefixer": "^10.4.7",
         "axios": "^0.25",
         "laravel-vite-plugin": "^0.2.1",
@@ -13,5 +14,8 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.4",
         "vite": "^2.9.11"
+    },
+    "dependencies": {
+        "@alpinejs/collapse": "^3.10.2"
     }
 }
