--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
     "require": {
         "php": "^8.0.2",
         "filament/filament": "^2.13",
+        "filament/spatie-laravel-media-library-plugin": "^2.13",
+        "filament/spatie-laravel-tags-plugin": "^2.13",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/tinker": "^2.7",
         "spatie/laravel-medialibrary": "^10.4",
+        "spatie/laravel-permission": "^5.5",
         "spatie/laravel-tags": "^4.3"
     },
     "require-dev": {
