--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "filament/spatie-laravel-media-library-plugin": "^2.13",
         "filament/spatie-laravel-tags-plugin": "^2.13",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/fortify": "^1.13",
         "laravel/framework": "^9.19",
         "laravel/tinker": "^2.7",
         "spatie/laravel-medialibrary": "^10.4",
