--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.7",
         "spatie/laravel-medialibrary": "^10.4",
         "spatie/laravel-permission": "^5.5",
-        "spatie/laravel-tags": "^4.3"
+        "spatie/laravel-tags": "^4.3",
+        "staudenmeir/eloquent-has-many-deep": "^1.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
