--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "alexjustesen/filament-spatie-laravel-activitylog": "^0.3.0",
         "filament/filament": "^2.13",
         "filament/spatie-laravel-media-library-plugin": "^2.13",
         "filament/spatie-laravel-tags-plugin": "^2.13",
@@ -16,10 +17,13 @@
         "laravel/fortify": "^1.13",
         "laravel/framework": "^9.19",
         "laravel/tinker": "^2.7",
+        "phpsa/filament-password-reveal": "^1.1",
+        "shuvroroy/filament-spatie-laravel-backup": "^1.2",
+        "spatie/laravel-activitylog": "^4.5",
+        "spatie/laravel-backup": "^8.1",
         "spatie/laravel-medialibrary": "^10.4",
         "spatie/laravel-permission": "^5.5",
-        "spatie/laravel-tags": "^4.3",
-        "staudenmeir/eloquent-has-many-deep": "^1.15"
+        "spatie/laravel-tags": "^4.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
