--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,11 @@
         "laravel/tinker": "^2.7",
         "phpsa/filament-password-reveal": "^1.1",
         "shuvroroy/filament-spatie-laravel-backup": "^1.2",
+        "shuvroroy/filament-spatie-laravel-health": "^1.4",
+        "spatie/cpu-load-health-check": "^1.0",
         "spatie/laravel-activitylog": "^4.5",
         "spatie/laravel-backup": "^8.1",
+        "spatie/laravel-health": "^1.11",
         "spatie/laravel-medialibrary": "^10.4",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-tags": "^4.3"
