--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/fortify": "^1.13",
         "laravel/framework": "^9.19",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "phpsa/filament-password-reveal": "^1.1",
         "shuvroroy/filament-spatie-laravel-backup": "^1.2",
         "shuvroroy/filament-spatie-laravel-health": "^1.4",
+        "socialiteproviders/discord": "^4.1",
         "spatie/cpu-load-health-check": "^1.0",
         "spatie/laravel-activitylog": "^4.5",
         "spatie/laravel-backup": "^8.1",
