--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,11 @@
         "spatie/laravel-health": "^1.11",
         "spatie/laravel-medialibrary": "^10.4",
         "spatie/laravel-permission": "^5.5",
-        "spatie/laravel-tags": "^4.3"
+        "spatie/laravel-tags": "^4.3",
+        "wire-elements/modal": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
