--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "filament/spatie-laravel-media-library-plugin": "^2.13",
         "filament/spatie-laravel-tags-plugin": "^2.13",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/cashier": "^13.12",
         "laravel/fortify": "^1.13",
         "laravel/framework": "^9.19",
         "laravel/socialite": "^5.5",
